[package]
name = "bongr"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.6.1"
bevy = "0.18.1"

# Enable high optimizations for dependencies (like Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# (Optional) Slightly optimize your own code in dev mode without ruining compile times
[profile.dev]
opt-level = 1
